--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://bitbucket.org/sid_arora/pro5_server#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.0.15"
   }
