Login Module Working

--- a/package.json
+++ b/package.json
@@ -17,10 +17,19 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/sid_arora/pro5_server#readme",
   "dependencies": {
+    "assert": "^1.4.1",
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "config": "^1.30.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "mongoose": "^5.0.15"
+    "express-session": "^1.15.6",
+    "mongoose": "^5.0.15",
+    "mongoose-unique-validator": "^2.0.1",
+    "validator": "^10.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.4",
+    "prettyjson": "^1.2.1"
   }
 }
