--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Server for pro5",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "helmet": "^3.12.1",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.15",
     "mongoose-unique-validator": "^2.0.1",
     "validator": "^10.1.0"
