--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^5.0.15",
     "mongoose-unique-validator": "^2.0.1",
     "multer": "^1.3.1",
+    "path": "^0.12.7",
     "pm2": "^2.10.4",
     "validator": "^10.1.0"
   },
